# gitlab-events-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
crawler_benchmark/: benchmark_results.py  run_benchmark.sh
crawler_parallel_execution/: README.md  arch_install.sh  arch_run_crawler.sh  crawler_execution_check.py  debian_install.sh  debian_run_crawler.sh  gl_instances.csv
scripts/: init_db.sh
src/: gl_get_benchmark.py
src/gitlab_crawler/: cli.py  crawler.py  db.py  db_dsn.py  models.py  trackers.py  types_formats.py  utils.py
tests/: test_crawler.py  test_db.py  test_models.py  test_trackers.py  test_utils.py
